package br.edu.ifpb.pps.colaborativaum.prototype;

public interface Prototype {
    Prototype getClone();
}
