@startuml colaborativaum
skinparam ClassAttributeIconSize 0

class Node<T extends Comparable<T>> {
    + T value
    + Node<T> left
    + Node<T> right

    + Node(T value)
    - Node(Node<T> otherNode)
    + String toString()
    + int compareTo(Node<T> otherNode)
    + Prototype getClone()
}

' IterableCollection
interface IterableBST<T extends Comparable<T>> {
    + BSTIterator<T> createPreorderIterator()
    + BSTIterator<T> createInorderIterator()
    + BSTIterator<T> createPostorderIterator()
    + BSTIterator<T> createLevelorderIterator()
}

' ConcreteCollection
class BinarySearchTree<T extends Comparable<T>> {
    - Node<T> root

    + BinarySearchTree(T value)
    - BinarySearchTree(BinarySearchTree<T> otherBst)
    + T getRoot()
    + boolean isEmpty()
    + T search(T value)
    - Node<T> search(Node<T> root, T key)
    + boolean contains(T key)
    - boolean contains(Node<T> root, T key)
    + void add(T value)
    - Node<T> addRecursive(Node<T> root, T value)
    + T delete(T key)
    - Node<T> delete(Node<T> root, T data)
    - T findMax(Node<T> root)
    
    ' iterate through the tree
    + void preorder()
    - void preorder(Node<T> root)
    + void inorder()
    - void inorder(Node<T> root)
    + void postorder()
    - void postorder(Node<T> root)

    + BSTIterator<T> createPreorderIterator()
    + BSTIterator<T> createInorderIterator()
    + BSTIterator<T> createPostorderIterator()
    + BSTIterator<T> createLevelorderIterator()
    
    + int size()
    + int size(Node<T> root)
    + Prototype getClone()
}

' Iterator interface
interface BSTIterator<T extends Comparable<T>> {
    + Node<T> getNext()
    + boolean hasNext()
}

' Concrete Iterators
class PreorderIterator<T extends Comparable<T>> {
    - Deque<Node<T>> stack

    + PreorderIterator(Node<T> root)
    + T getNext()
    + boolean hasNext()
}

class InorderIterator<T extends Comparable<T>> {
    - Stack<Node<T>> stack

    + T getNext()
    + boolean hasNext()
    - void pushAll(Node<T> node)
}

class PostorderIterator<T extends Comparable<T>> {
    - Stack<Node<T>> stack

    + PostorderIterator(Node<T> root)
    + T getNext()
    + boolean hasNext()
    - void init(Node<T> node)
}

class LevelorderIterator<T extends Comparable<T>> {
    - Queue<Node<T>> queue

    + LevelorderIterator(Node<T> root)
    + T getNext()
    + boolean hasNext()
}

' Prototype interface
interface Prototype {
    + Prototype getClone()
}

' Relationships
BinarySearchTree "1" *-- "1..*" Node
IterableBST <|.. BinarySearchTree

BSTIterator <.. IterableBST

BinarySearchTree <--> PreorderIterator
BinarySearchTree <--> InorderIterator
BinarySearchTree <--> PostorderIterator
BinarySearchTree <--> LevelorderIterator

BSTIterator <|.. PreorderIterator
BSTIterator <|.. InorderIterator
BSTIterator <|.. PostorderIterator
BSTIterator <|.. LevelorderIterator

Prototype <|.. Node
Prototype <|.. BinarySearchTree

@enduml